Problems in the predict model | Fix ASAP

--- a/site/applicationSite/templates/index.html
+++ b/site/applicationSite/templates/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <header id="header">
-        <a href="#" class="logo">Tantei</a>
+        <a href="/" class="logo">Tantei | 探偵</a>
         <ul>
             <li><a href="#">Home</a></li>
             <li><a href="#about">About</a></li>
