--- a/web_layout/template/tantei2.html
+++ b/web_layout/template/tantei2.html
@@ -8,14 +8,13 @@
     <!--Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="{{url_for('static', filename="css/tantei.css")}}">
-        <!--Add link-->
-    <link rel="icon" type="image/png" sizes="192x192" href="{{url_for('static', filename='img/logo192.png')}}">
+    <script src="https://kit.fontawesome.com/3eef08a589.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="../template/css/result.css">
     <title>Tantei | 探偵</title>
 </head>
 
 <body>
+
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="#">Tantei | 探偵</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -25,10 +24,10 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item active">
-                    <a class="nav-link" href="/">Home</a>
+                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/tantei">Try again</a>
+                    <a class="nav-link" href="#">Try again</a>
                 </li>
             </ul>
         </div>
@@ -39,7 +38,7 @@
     </div>
 
     <div class="container">
-        <form action="{{url_for('predict')}}" method="POST">
+        <form>
             <label for="message">Type text news</label>
             <textarea id="message" name="message" placeholder="Write the news.." style="height:200px"
                 required></textarea>
@@ -50,20 +49,17 @@
     </div>
 
     <div class="container-sm">
-
-        {% if prediction  == 1 %}
+        <!--Result == 1-->
         <div class="alert alert-success text-center">
             <strong><i class="far fa-check-circle"></i></strong> Great, the news is real.
         </div>
-
-        {% elif prediction == 0 %}
+        <!--Result == 0-->
         <div class="alert alert-danger text-center">
-            <strong><i class="fas fa-robot"></i></strong> Be careful, this news turned out to be false. Check your sources.
+            <strong><i class="fas fa-robot"></i></strong> Be careful, this news turned out to be false. Check your
+            sources.
         </div>
-        
-        {% endif %}
-    
     </div>
+
 
     <!--Bootstrap-->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"
