--- a/site/applicationSite/templates/index.html
+++ b/site/applicationSite/templates/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="{{url_for('static', filename="css/style.css")}}">
+    <!--Add link-->
+    <link rel="icon" type="image/png" sizes="192x192" href="{{url_for('static', filename='img/logo192.png')}}">
     <title>Tantei | 探偵</title>
 </head>
 <body>
@@ -88,6 +90,8 @@
             </div>
         </div>
     </section>
+
+    <!--Footer section-->
 
 
     <script type="text/javascript">
